homarr/homarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
spec:
  type: ClusterIP
  ports:
    - port: 7575
      targetPort: 7575
  selector:
    app: homarr
